# cpu-ray-tracer

./: CMakeLists.txt  LICENSE  README.md
include/core/: ImageBuffer.h  Ray.h  Vec3.h
include/renderer/: Renderer.h
include/scene/: Camera.h  Hittable.h  Lambertian.h  Material.h  Metal.h  Scene.h  Sphere.h
include/ui/: UI.h
src/: main.cpp
src/renderer/: Renderer.cpp
src/ui/: UI.cpp
